# ML-Interview

./: .gitignore  README.md
Async/: README.md  async_api_call.py  async_basic.py  async_multi_thread.py
Async-API/: README.md  run.py
Attention/: README.md  attention_sink.py  modeling_llama.py
Checkpointing/: README.md  run.py  run.sh
Cuda/: README.md  cublas.py  matrix_add.cu  matrix_row_sum.cu  mm.cu  tiling_mm.cu  vector_add.cu
Diffusion/: README.md  diffusion.py  mnist_unet.py  simple_unets.py
Docker/: Dockerfile.verl.sglang  Dockerfile.verl.vllm  README.md
Leetcode/: README.md  snake.py
Leetcode/microsoft/: problem1.py  problem2.py  problem3.py  problem8.py
Leetcode/openai/: Classification_analysis.ipynb  resume_iterator.py
Mamba/: README.md  s4.py  state_space_model.py
NaViT/: README.md  idefics2.py  run.py
Parallelism/: README.md  fsdp.py  model_parallelism_barebone_2_gpus.py  model_parallelism_barebone_2_gpus_async.py  model_parallelism_barebone_k_gpus.py  tensor_parallelism.py
Post-Training/: README.md  problem1.py  problem10.py  problem11.py  problem12.py  problem13.py  problem14.py  problem15.py  problem16.py  problem17.py  problem18.py  problem19.py  problem2.py  problem20.py  problem21.py  problem3.py  problem4.py  problem5.py  problem6.py  problem7.py  problem8.py  problem9.py
Python-Setup/: MANIFEST.in  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.py  test_my_package.py
Python-Setup/my_package/: __init__.py  calculator.py  cli.py  utils.py
Quantization/: README.md  awq.py  helper.py
RL/: README.md  run.py
Ray/: README.md  cleanup_ray.sh  fsdp_main.py  quick_start.sh  ray_fsdp_32b.py  ray_fsdp_toy.py  requirements.txt  run.sh
RoPE/: README.md  run.py
Triton/: README.md  layer_norm.py
VAE/: README.md  vae.py
Verl/: 32b_sglang_async.sh  32b_vllm_async.sh  32b_vllm_sync.sh  80b_vllm_async.sh  README.md
multi-gpus/: fsdp.py  model_parallelism_barebone_2_gpus.py  model_parallelism_barebone_k_gpus.py  tensor_parallelism.py
openai/: Classification_Analysis_(Problem).ipynb
torchrun/: README.md  run.sh  run_with_mpirun.py  run_with_python.py  run_with_torchrun.py  slurm_run_mpi.sh  slurm_run_torchrun.sh  slurm_run_torchrun_cnn.sh  train.py
